cargo-features = ["profile-rustflags"]

[package]
name = "fastasx"
version = "0.1.1"
edition = "2021"
authors = ["Luke Thompson <luke-a-thompson@outlook.com>"]

[dependencies]
byteorder = "1.5.0"
ringbuf = "0.4.1"
thiserror = "1.0.63"

[dev-dependencies]
fastrand = "2.1.0"

# [build]
# rustflags = ["-C", "target-cpu=native"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1  # ~Doubles performance for some message parses
panic = "abort"
debug = false

[profile.release.build-override]
rustflags = ["-C", "target-cpu=native"]  # No big difference in performance

