cargo-features = ["profile-rustflags"]

[package]
name = "fastasx"
version = "0.1.1"
edition = "2021"
authors = ["Luke Thompson <luke-a-thompson@outlook.com>"]

[lib]
name = "fastasx"
path = "src/lib.rs"

[[bin]]
name = "fastasx_bin"
path = "src/main.rs"

[features]
bench = []

[dependencies]
byteorder = "1.5.0"
ringbuf = "0.4.1"
thiserror = "1.0.63"
fastrand = "2.1.0"
log = { version = "0.4.22", features = ["release_max_level_warn"] }
env_logger = "0.11.5"
ratatui = "0.28.1"
crossterm = "0.28.1"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1 # ~Doubles performance for some message parses
panic = "abort"
debug = false

[profile.release.build-override]
rustflags = ["-C", "target-cpu=native"] # No big difference in performance

[[bench]]
name = "benchmarks"
harness = false
